# haskell-stuff

./: .gitignore  CHANGELOG.md  README.md  cabal.sandbox.config  haskell-stuff.cabal  package.yaml  stack.yaml
algebra/: AlgebraStuff.hs  Top8List.hs  algebra.cabal  stack.yaml
categories/: CHANGELOG.md  LICENSE  categories.cabal  package.yaml  stack.yaml
categories/src/: Category.hs
cellular-automata/: CHANGELOG.md  LICENSE  cellular-automata.cabal  stack.yaml
cellular-automata/src/: CellularAutomata.hs
cellular-automata/src/CellularAutomata/: CommandInterface.hs
cont-things/: CHANGELOG.md  README.md  cont-things.cabal  package.yaml  stack.yaml
cont-things/app/: Main.hs
cont-things/src/: ContThings.hs  CoroutineStuff.hs
coordset/: CHANGELOG.md  README.md  coordset.cabal  stack.yaml
coordset/src/: Main.hs
coordset/src/Data/Set/: UniqueCoord.hs
cps-things/: CHANGELOG.md  README.md  package.yaml
cps-things/src/: Lib.hs
dice/: CHANGELOG.md  dice.cabal  package.yaml  stack.yaml
dice/app/: Main.hs
dice/src/Dice/: Parsing.hs
graphics/: CHANGELOG.md  graphics.cabal
graphics/app/: Main.hs
graphics/src/: GameState.hs  Lib.hs  Motion2.hs  Rectangle.hs  TimeStep.hs
images/: CHANGELOG.md  images.cabal  stack.yaml
json-parser/: CHANGELOG.md  LICENSE  json-parser.cabal  stack.yaml
json-parser/src/: Json.hs  StringParser.hs
my-arrows/: CHANGELOG.md  README.md  my-arrows.cabal  stack.yaml
my-arrows/src/: Lib.hs
pipestuff/: CHANGELOG.md  README.md  pipestuff.cabal
pipestuff/src/: Main.hs
rand/: MyRand.hs  rand.cabal  stack.yaml
src/: Anagram.hs  ArgParser.hs  BlankLines.hs  DelayErrors.hs  DerpBob.hs  Dice.hs  EDO.hs  FizzBuzz.hs  Foo.hs  FreeApplicative.hs  HelloWorld.hs  PrimeStuff.hs  Random.hs  SkiFinal.hs  Varfun.hs  edo.hs
src/Dice/: Parsing.hs
tutorial/: CHANGELOG.md  tutorial.cabal
tutorial/src/: Foo.hs  Main.hs
wc/: CHANGELOG.md  Main.hs  README.md  TryingSingletons.hs  Wc.hs  stack.yaml  wc.cabal
