name:                haskell-stuff
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/derelbenkoenig/haskell-stuff#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Benson
maintainer:          rbenson@bandwidth.com
copyright:           2023 Robert Benson
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DelayErrors,
                       EDO,
                       PrimeStuff,
                       SkiFinal,
                       FreeApplicative,
                       Dice,
                       Dice.Parsing
  build-depends:       base >= 4.7 && < 5,
                       text,
                       bytestring,
                       vector,
                       MonadRandom,
                       singletons,
                       singletons-th,
                       exinst,
                       megaparsec,
                       parser-combinators
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable blanklines
  hs-source-dirs:      src
  main-is:             BlankLines.hs
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable derpbob
  hs-source-dirs:      src
  main-is:             DerpBob.hs
  build-depends:       base >= 4.7 && < 5,
                       text
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints


source-repository head
  type:     git
  location: https://github.com/derelbenkoenig/haskell-stuff
