name:                cellular-automata
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/derelbenkoenig/cellular-automata#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Benson
maintainer:          rbenson@bandwidth.com
copyright:           2023 Robert Benson
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CellularAutomata,
                       CellularAutomata.CommandInterface
  build-depends:       base >= 4.7 && < 5,
                       adjunctions,
                       comonad,
                       vector,
                       distributive,
                       text,
                       MonadRandom,
                       mtl,
                       megaparsec
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/derelbenkoenig/cellular-automata
