name:                images
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/derelbenkoenig/images#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Benson
maintainer:          rbenson@bandwidth.com
copyright:           2023 Robert Benson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable images
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
