cabal-version:       2.2

name:                json-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/json-parser#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     StringParser,
                       Json
  build-depends:       base >= 4.7 && < 5,
                       containers
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/json-parser
