name:                tutorial
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/derelbenkoenig/tutorial#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Benson
maintainer:          rbenson@bandwidth.com
copyright:           2023 Robert Benson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable tutorial
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Foo
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wno-type-defaults
